--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
