--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.27.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.4.6"
+    "mongoose": "^6.4.6",
+    "ol-marker-feature": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
